a lil updates